syntax = "proto3";

package coteacher.v1;

import "google/protobuf/timestamp.proto";

// Base user message
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  oneof role {
    Teacher teacher = 4;
    Student student = 5;
  }
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// Teacher message with a reference to the User ID
message Teacher {
  string id = 1; // This should match the User ID if it's a 1-to-1 relationship
}

// Student message with a reference to the User ID
message Student {
  string id = 1; // This should match the User ID if it's a 1-to-1 relationship
}

message ClassInvitationCode {
  string id = 1;
  string class_id = 2;
  string invitation_code = 3;
  google.protobuf.Timestamp expiration_date = 4;
  bool is_active = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message Class {
  string id = 1;
  string teacher_id = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message StudentClass {
  string student_id = 1;
  string class_id = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message Form {
  string id = 1;
  string class_id = 2;
  string name = 3;
  string description = 4;
  int32 usage_limit = 5;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message Question {
  string id = 1;
  string question_id = 2;
  enum QuestionType {
    QUESTION_TYPE_UNSPECIFIED = 0;
    QUESTION_TYPE_CHECKBOX = 1;
    QUESTION_TYPE_LIST = 2;
    QUESTION_TYPE_RADIO = 3;
    QUESTION_TYPE_MULTIPLE_CHOICE = 4;
    QUESTION_TYPE_PARAGRAPH_TEXT = 5;
    QUESTION_TYPE_TEXT = 6;
  }
  QuestionType question_type = 3;
  string question_text = 4;
  message TextQuestion {
    string id = 1;
    string question_id = 2;
    int32 max_length = 3;
  }
  TextQuestion text_question = 5;
  message QuestionOption {
    string id = 1;
    string question_id = 2;
    string option_text = 3;
    int32 order = 4;
  }
  repeated QuestionOption options = 6;
  bool is_required = 7;
  bool for_ai_processing = 8;
  int32 order = 9;
  string form_id = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}